--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "react-toastify": "^10.0.5",
+    "formik": "^2.4.6",
+    "@tanstack/react-query": "^5.51.18"
   },
   "devDependencies": {
     "@types/node": "^22.0.2",
